# opacities_for_HURAKAN

./: .gitignore  CMakeLists.txt  README.md  compil.sh  config.txt  create_opacities_files.py  meta_run.py  meta_run_bash.sh  param_space.txt  prog.ipynb  run.sh
src/: constants.f95  main.f95  opacity_mod.f95  regime.f95  utils.f95
